--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository":{
+  "repository": {
     "type": "git",
     "url": "https://github.com/dimaszsiddik/XAPIs.git"
   },
@@ -23,7 +23,8 @@
     "body-parser": "^1.18.3",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.1",
-    "restify": "^7.2.1"
+    "restify": "^7.2.1",
+    "restify-cors-middleware": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
